@@ -91,7 +91,8 @@ HRESULT CSftpDirectory::_Fetch( SHCONTF grfFlags )
 						false,
 						lt.uPermissions,
 						lt.uSize,
-						lt.dateModified);
+						lt.dateModified,
+						lt.dateAccessed);
 
 					m_vecPidls.push_back(pidl);
 				}
