@@ -62,6 +62,8 @@ namespace { // private
 		  SHCOLSTATE_TYPE_STR | SHCOLSTATE_ONBYDEFAULT, LVCFMT_LEFT, 20 },
 		{ IDS_COLUMN_MODIFIED, PKEY_DateModified,      // Modified date
 		  SHCOLSTATE_TYPE_STR | SHCOLSTATE_ONBYDEFAULT, LVCFMT_LEFT, 20 },
+		{ IDS_COLUMN_ACCESSED, PKEY_DateAccessed,      // Accessed date
+		  SHCOLSTATE_TYPE_STR | SHCOLSTATE_ONBYDEFAULT, LVCFMT_LEFT, 20 },
 		{ IDS_COLUMN_PERMISSIONS, PKEY_Permissions,    // Permissions
 		  SHCOLSTATE_TYPE_STR | SHCOLSTATE_ONBYDEFAULT, LVCFMT_LEFT, 12 },
 		{ IDS_COLUMN_OWNER, PKEY_FileOwner,            // Owner
